# controller/people_controller.go
@@ -9,7 +9,6 @@ import (
 	"github.com/torogeldiiev/car_catalog/service"
 )
 
-// PeopleController handles HTTP requests related to peop
 type PeopleController struct {
 	peopleService *service.PeopleService
 }
@@ -21,16 +20,6 @@ func NewPeopleController(peopleService *service.PeopleService) *PeopleController
 	}
 }
 
-// CreatePersonHandler handles requests to create a new person
-
-// CreatePersonHandler @Summary Create person
-// @Description Create a new person
-// @Tags people
-// @Accept json
-// @Produce json
-// @Param person body model.People true "Person object"
-// @Success 201 {object} map[string]int "Created person ID"
-// @Router /people/create [post]
 func (pc *PeopleController) CreatePersonHandler(w http.ResponseWriter, r *http.Request) {
 	var person model.People
 	if err := json.NewDecoder(r.Body).Decode(&person); err != nil {
@@ -48,14 +37,6 @@ func (pc *PeopleController) CreatePersonHandler(w http.ResponseWriter, r *http.R
 	json.NewEncoder(w).Encode(map[string]int{"personID": personID})
 }
 
-// GetPersonByIDHandler @Summary Get person by ID
-// @Description Get a person by their ID
-// @Tags people
-// @Accept json
-// @Produce json
-// @Param id query string true "Person ID"
-// @Success 200 {object} model.People "Found person"
-// @Router /people/get [get]
 func (pc *PeopleController) GetPersonByIDHandler(w http.ResponseWriter, r *http.Request) {
 	personIDStr := r.URL.Query().Get("id")
 	if personIDStr == "" {
@@ -79,17 +60,6 @@ func (pc *PeopleController) GetPersonByIDHandler(w http.ResponseWriter, r *http.
 	json.NewEncoder(w).Encode(person)
 }
 
-// UpdatePersonHandler handles requests to update an existing person
-
-// UpdatePersonHandler @Summary Update person
-// @Description Update an existing person
-// @Tags people
-// @Accept json
-// @Produce json
-// @Param id query string true "Person ID"
-// @Param person body model.People true "Updated person object"
-// @Success 200 "OK"
-// @Router /people/update [put]
 func (pc *PeopleController) UpdatePersonHandler(w http.ResponseWriter, r *http.Request) {
 	personIDStr := r.URL.Query().Get("id")
 	if personIDStr == "" {
@@ -117,16 +87,6 @@ func (pc *PeopleController) UpdatePersonHandler(w http.ResponseWriter, r *http.R
 	w.WriteHeader(http.StatusOK)
 }
 
-// DeletePersonHandler handles requests to delete a person by their ID
-
-// DeletePersonHandler @Summary Delete person
-// @Description Delete a person by their ID
-// @Tags people
-// @Accept json
-// @Produce json
-// @Param id query string true "Person ID"
-// @Success 200 "OK"
-// @Router /people/delete [delete]
 func (pc *PeopleController) DeletePersonHandler(w http.ResponseWriter, r *http.Request) {
 	personIDStr := r.URL.Query().Get("id")
 	if personIDStr == "" {
